5984
I have one more question though, because I don't know what the "rule" is in scalac concerning deprecated apis.

When I compile this file which uses a deprecated valueOf method I get an error but some other deprecated apis get a message with "run scalac with -deprecation" or alike

{code}
C:\scala-2.9.0.RC5\examples>scalac scalaenums.scala
scalaenums.scala:8: error: value valueOf is not a member of object scalaenums.We
ekDay
   println(WeekDay.valueOf("Wed")) // returns Some(Wed)
                   ^
one error found
{code}

I reopen this ticket because I am not sure if the ticket can be seen by you if I post on a closed ticket.
